config-sync-repo/policies/require-owner-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireOwner
metadata:
  name: configmaps-need-owner
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["ConfigMap"]
    namespaces: ["policy-lab"]
  parameters:
    label: owner
